k8s-apps/utilities/glitchgate/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: glitchgate
  labels:
    app.kubernetes.io/name: glitchgate
    app.kubernetes.io/part-of: utilities
