k8s-apps/utilities/glitchgate/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: glitchgate
  namespace: glitchgate
  labels:
    app.kubernetes.io/name: glitchgate
spec:
  selector:
    app.kubernetes.io/name: glitchgate
  ports:
    - port: 80
      targetPort: 4000
